@@ -1,5 +1,6 @@
 Changes for 1.0beta14:
 
+ - fixed removal of trigger dependency (Alexei)
  - added substitution of macros for all actions (Alexei)
  - added escaping of 'special' characters before SQL insert statements
  (Alexei)
